# rocm-amdgpu-bench-glog-fork

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  common.cpp  common.h  kernels.cpp  kernels.h  roofline.cpp  roofline.h
.github/: CODEOWNERS
.github/workflows/: build.yml  generate_binaries.yml
.glog/: glog-scan.sarif
